--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
   <version>1.0-SNAPSHOT</version>
   <modules>
     <module>java_api_object</module>
+      <module>java_api_string</module>
   </modules>
   <packaging>pom</packaging>
 
