--- a/java-api-object/pom.xml
+++ b/java-api-object/pom.xml
@@ -7,21 +7,16 @@
         <groupId>com.tedu.cn.api</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <packaging>jar</packaging>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>java_api_object</artifactId>
 
+    <artifactId>java-api-object</artifactId>
+    <packaging>jar</packaging>
     <dependencies>
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql.driver.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis</artifactId>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
         </dependency>
     </dependencies>
+
 
 </project>
