--- a/java-api-string/pom.xml
+++ b/java-api-string/pom.xml
@@ -8,15 +8,15 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+
+    <artifactId>java-api-string</artifactId>
     <packaging>jar</packaging>
-
-    <artifactId>java_api_string</artifactId>
-
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
     </dependencies>
+
 
 </project>
