--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,9 @@
   <artifactId>java_api</artifactId>
   <version>1.0-SNAPSHOT</version>
   <modules>
-    <module>java_api_object</module>
-      <module>java_api_string</module>
     <module>java-api-data</module>
+    <module>java-api-object</module>
+    <module>java-api-string</module>
   </modules>
   <packaging>pom</packaging>
 
