--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     <junit.driver.version>4.11</junit.driver.version>
     <mysql.driver.version>8.0.17</mysql.driver.version>
     <org.mybatis.driver.version>3.5.2</org.mybatis.driver.version>
+    <org.projectlombok.driver.version>1.18.8</org.projectlombok.driver.version>
   </properties>
 
   <dependencyManagement>
@@ -48,6 +49,13 @@
         <artifactId>junit</artifactId>
         <version>${junit.driver.version}</version>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+      <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>${org.projectlombok.driver.version}</version>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
 
